kubernetes/apps/database/cloudbeaver/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: database
spec:
  ports:
    - name: http
      port: 8978
      targetPort: 8978
      protocol: TCP
