kubernetes/apps/database/cloudbeaver/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudbeaver
  namespace: database
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: cloudbeaver.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - cloudbeaver.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cloudbeaver
          port: 8978
